# Agriculture

./: .gitignore  App.js  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/agro/: MainActivity.kt  MainApplication.kt
backend/: Cargo.toml
backend/src/: couchdb.rs  handlers.rs  main.rs  seed.ps1  test_backend.ps1
components/: Login.js
ios/: Podfile
ios/agro.xcodeproj/: project.pbxproj
screens/: Login.js
