[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }