[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
qrcode = "0.14.1"
image = "0.25.8"  
base64 = "0.22.1" 
chrono = { version = "0.4.42", features = ["serde", "clock"] }
url = "2.5.7"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
dotenvy = "0.15"